--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 type="number"
                 placeholder="Quantity"
                 class="trade-input qty-2"
+                required
               />
               <input
                 type="number"
@@ -89,14 +90,14 @@
           <div class="trade-calc">
             <div class="trade-avg-wrapper">
               <p class="trade-avg-lable">average</p>
-              <h3 class="trade-avg">$8989</h3>
+              <h3 class="trade-avg">----</h3>
             </div>
             <div class="trade-summary">
-              <p class="total-qty total-label">
-                Total Quantity : <span>12132</span>
+              <p class="total-label">
+                Total Quantity : <span class="total-qty">---</span>
               </p>
-              <p class="total-value total-label">
-                Total Value : <span>$78,132</span>
+              <p class="total-label">
+                Total Value : <span class="total-value">---</span>
               </p>
             </div>
             <button class="trade-calc-btn">Calculate</button>
