--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <h2>Enter the trades below</h2>
         </div>
         <div class="trade-list-wrapper">
+          <p class="error"></p>
           <ul class="trade-list">
             <li class="trade-item-row">
               <p class="trade-tag">Trade 1</p>
