--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <header class="header" id="header">
       <nav class="navbar container">
         <a href="">
-          <h2 class="logo">PaisaByte</h2>
+          <p class="logo">PaisaByte</p>
         </a>
 
         <div class="menu" id="menu">
           <ul class="list">
             <li class="list-item">
-              <a href="#" class="list-link">Home</a>
+              <a href="#" class="list-link">Contact</a>
             </li>
             <li class="list-item">
               <a href="#" class="list-link">About</a>
@@ -109,6 +109,9 @@
         <div class="div6"></div>
       </div>
     </section>
+    <footer>
+      <p>Copyright 2022 | Built by Tahur</p>
+    </footer>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
