--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="assets/img/favicon.png"
+      href="assets/img/favicon.ico"
       type="image/x-icon"
     />
 
@@ -18,7 +18,7 @@
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
     <title>PaisaByte</title>
   </head>
@@ -105,13 +105,25 @@
           </div>
         </div>
 
-        <div class="div5"></div>
+        <div class="div5">
+          <p
+            class="sc-embed"
+            data-width="300px"
+            data-orders="%5B%7B%22quantity%22%3A10%2C%22ticker%22%3A%22INFY%22%7D%5D"
+            data-cardsize="small"
+            data-withtt="false"
+            data-withsearch="true"
+          >
+            <strong>loading widget to trade INFY</strong>
+          </p>
+        </div>
         <div class="div6"></div>
       </div>
     </section>
     <footer>
       <p>Copyright 2022 | Built by Tahur</p>
     </footer>
+    <script async src="https://www.gateway-tt.in/assets/embed.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
