fixed for mobile

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="div-lable">
           <h2>Enter the trades below</h2>
         </div>
-        <div class="trade-list-wrapper">
+        <div class="trade-list-wrapper card">
           <p class="error"></p>
           <ul class="trade-list">
             <li class="trade-item-row">
@@ -78,17 +78,18 @@
             </li>
           </ul>
           <div class="add-child">
-            <button class="btn btn-add-row" id="btn-add-trade" role="button">
+            <button class="btn btn-add-row btn-outline" role="button">
               Add Row
             </button>
           </div>
         </div>
         <div class="bottom-buttons-wrapper">
-          <button class="btn btn-control btn-clear" role="button">Clear</button>
-          <button class="btn btn-control btn-reset" role="button">Reset</button>
+          <button class="btn btn-outline btn-clear" role="button">Clear</button>
+          <button class="btn btn-outline btn-reset" role="button">Reset</button>
+          <button class="btn btn-lg trade-calc-btn">Calculate</button>
         </div>
         <div class="trade-calc-wrapper">
-          <div class="trade-calc">
+          <div class="trade-calc card">
             <div class="trade-avg-wrapper">
               <p class="trade-avg-lable">average</p>
               <h3 class="trade-avg">----</h3>
@@ -101,11 +102,10 @@
                 Total Value : <span class="total-value">---</span>
               </p>
             </div>
-            <button class="trade-calc-btn">Calculate</button>
           </div>
         </div>
 
-        <div class="div5">
+        <!-- <div class="div5">
           <p
             class="sc-embed"
             data-width="300px"
@@ -117,7 +117,7 @@
             <strong>loading widget to trade INFY</strong>
           </p>
         </div>
-        <div class="div6"></div>
+        <div class="div6"></div> -->
       </div>
     </section>
     <footer>
